# spaced-dna

./: .gitignore  Makefile  Makefile.am  README  README.md  configure.ac  extkey.cpp  extkey.h  patternset.cxx  patternset.h  sort.h  spaced.1  spaced.cc  variance.cxx  variance.h
src/: patternset.cpp  patternset.h  sort.h  spaced.cc  variance.cpp  variance.h
